[project]
name = "viadata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.23.0",
    "google-cloud-bigquery>=3.42.1",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python>=4.6.0",
    "sqlalchemy>=2.0.51",
]
